	  new entry to the hash table. Previous behaviour was to issue a
	  warning and continue.

	* mt19937ar.c, mt19937ar.h, Makefile.am, arp-scan.h: Update Mersenne Twister
	  random number generator source code to latest version from
	  https://github.com/clibs/mt19937ar

	* strlcat.c, strlcpy.c: Updated from latest OpenBSD source.

2022-09-03 Roy Hills <Roy.Hills@hotmail.com>

	* arp-scan.c: Allow MAC addresses in mac-vendor.txt to use either lower
	  or uppercase hex digits and ignore any seperator characters e.g. ":"
	  or "-". This allows normal format MAC addresses such as those output
	  by arp-scan to be used directly in the mac-vendor.txt file.

	* mac-vendor.txt: Update comments to reflect code changes.

2022-06-16 Roy Hills <Roy.Hills@hotmail.com>

	* get-iab: change IEEE IAB URL to
	  http://standards-oui.ieee.org/iab/iab.txt. Thanks to silex for the
	  pull request.

	* Updated ieee-oui.txt and ieee-iab.txt files.

2021-12-12 Roy Hills <Roy.Hills@hotmail.com>

	* arp-scan.c: Limit packet length in callback() to prevent potential
	  buffer overrun in unmarshal_arp_pkt() if network frames larger
	  than expected are received by libpcap. Thanks to @mrquincle for
	  reporting this issue.

2021-11-17 Roy Hills <Roy.Hills@hotmail.com>

	* Use getifaddrs() to obtain the interface IP address if it is available
	  and pcap_findalldevs() fails to find the address.

	  This is typically needed for device aliases such as "eth0:0" on Linux
	  which are not supported by pcap_findalldevs() and would previously
	  cause an error.

	* Increment version number to 1.9.8 to reflect code and autoconf
	  changes.

2021-09-09 Roy Hills <Roy.Hills@hotmail.com>

	* Retry sending an ARP packet if the packet send function fails with
	  EAGAIN instead of aborting with an error message. High packet send
	  rates can cause sendto() to fail occasionally with EAGAIN due to
	  temporary resource starvation. Thanks to gessel for reporting this
	  problem.
